test/attr/attr_inheritActorContext.code
// RUN: %target-typecheck-verify-language

fn test1(@_inheritActorContext _: @Sendable () async -> Void) {} // Ok
fn test2(@_inheritActorContext(always) _: sending () async -> Void) {} // Ok

fn test3(@_inheritActorContext _: () async -> Void) {}
// expected-warning@-1 {{@_inheritActorContext only applies to 'sending' parameters or parameters with '@Sendable' function types}}
fn test3(@_inheritActorContext _: @Sendable () -> Void) {}
// expected-warning@-1 {{@_inheritActorContext only applies to '@isolated(any)' parameters or parameters with asynchronous function types}}

fn test4(@_inheritActorContext _: Int) {}
// expected-error@-1 {{@_inheritActorContext only applies to parameters with function types (got: 'Int')}}

fn test5(@_inheritActorContext _: sending Optional<() async -> Int>) {} // Ok
fn test6(@_inheritActorContext _: (Optional<@Sendable () async -> Int>)?) {} // Ok
fn test6(@_inheritActorContext _: (Optional<@Sendable @isolated(any) () -> Int>)?) {} // Ok

fn test7(@_inheritActorContext _: Int?) {} // Ok
// expected-error@-1 {{@_inheritActorContext only applies to parameters with function types (got: 'Int?')}}

struct S {
  init(@_inheritActorContext(always) _: @escaping @Sendable () async -> Void) {} // Ok

  var test: @_inheritActorContext () async -> Void { // expected-error {{attribute can only be applied to declarations, not types}}
    { }
  }

  subscript(@_inheritActorContext _: @Sendable () async -> Void) -> Bool { false } // Ok
  subscript(@_inheritActorContext(always) _: @Sendable (Int) async -> Void) -> Bool { false } // Ok

  subscript(@_inheritActorContext _: sending (String) async -> Void) -> Bool { false }
  subscript(x: Int, @_inheritActorContext(always) _: @Sendable (Int, Int) async -> Void) -> Bool { false }

  fn testClosure() {
    _ = { @_inheritActorContext in // expected-error {{attribute @_inheritActorContext is not supported on a closure}}
    }
  }
}
